@@ -7,7 +7,6 @@ import static shop.nuribooks.books.book.category.entity.QCategory.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -17,8 +16,8 @@ import org.springframework.stereotype.Repository;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 
 import lombok.RequiredArgsConstructor;
-import shop.nuribooks.books.book.book.dto.AdminBookListResponse;
 import shop.nuribooks.books.book.book.dto.BookContributorsResponse;
+import shop.nuribooks.books.book.book.dto.BookListResponse;
 import shop.nuribooks.books.book.book.entity.Book;
 import shop.nuribooks.books.book.book.utility.BookUtils;
 import shop.nuribooks.books.book.bookcontributor.dto.BookContributorInfoResponse;
@@ -59,7 +58,7 @@ public class BookCategoryCustomImpl implements BookCategoryCustom {
 	}
 
 	@Override
-	public List<AdminBookListResponse> findBooksByCategoryId(List<Long> categoryIds, Pageable pageable) {
+	public List<BookListResponse> findBooksByCategoryId(List<Long> categoryIds, Pageable pageable) {
 		List<Book> books = queryFactory
 			.select(book)
 			.from(bookCategory)
@@ -69,9 +68,8 @@ public class BookCategoryCustomImpl implements BookCategoryCustom {
 			.limit(pageable.getPageSize())
 			.fetch();
 		return books.stream()
-			.map(AdminBookListResponse::of)
-			.collect(Collectors.toList());
-
+			.map(BookListResponse::of)
+			.toList();
 	}
 
 	@Override
@@ -100,7 +98,7 @@ public class BookCategoryCustomImpl implements BookCategoryCustom {
 		// BookContributorsResponse 목록을 생성합니다.
 		List<BookContributorsResponse> bookContributorsResponseList = books.stream()
 			.map(book -> {
-				AdminBookListResponse bookDetails = AdminBookListResponse.of(book);
+				BookListResponse bookDetails = BookListResponse.of(book);
 
 				// 기여자 정보를 조회하여 역할별로 그룹화합니다.
 				List<BookContributorInfoResponse> contributors = bookContributorRepository.findContributorsAndRolesByBookId(
@@ -110,8 +108,7 @@ public class BookCategoryCustomImpl implements BookCategoryCustom {
 				// BookContributorsResponse 객체를 생성합니다.
 				return new BookContributorsResponse(bookDetails, contributorsByRole);
 			})
-			.collect(Collectors.toList());
-
+			.toList();
 		return new PageImpl<>(bookContributorsResponseList, pageable, totalElements);
 	}
 
